compiler/testData/cli/jvm/annotationDefaultTargetWithOptInFirstOnly.out
warning: the argument '-Xannotation-default-target=first-only' disables a stable language feature for the current language version 2.4. Future support for this mode is not guaranteed.
compiler/testData/cli/jvm/annotationDefaultTargetWithOptIn.kt:4:10: error: opt-in requirement marker annotation cannot be used on parameter.
class My(@Marker val x: String)
         ^^^^^^^
COMPILATION_ERROR
